--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "Daniel Voicu",
   "license": "EUPL-1.1",
   "devDependencies": {
+    "babel-preset-react": "^6.11.1",
     "bootstrap-sass": "^3.3.6",
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
